<resources>
    <string name="app_name">My ToDo List</string>
    <string name="TodoText">Insert new item</string>
    <string name="AddTodo">Add</string>
    <string name="EmptyTodo">Empty ToDo string</string>
    <string name="ListButtonName">List</string>
    <string name="GridButtonName">Grid</string>
    <string name="action_new_item">Add</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_todo">New item</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_Text">SignUp</string>
    <string name="loginButton">LOGIN</string>
    <string name="login_image_description">login image</string>
    <string name="sign_up_button_label">SIGNUP</string>
    <string name="login_error_message">login error</string>
    <string name="login_error_title">User not registered</string>
    <string name="signup_error_message">Signunp error</string>
    <string name="signup_error_title">invalid user or pasword</string>
    <string name="action_signout">sign out</string>
</resources>
